hphp/test/zend/good/ext/gd/tests/imagepng_nullbyte_injection.php.skipif
<?php
$support = gd_info();
if (!isset($support['PNG Support']) || $support['PNG Support'] === false) {
	print 'skip png support not available';
}
?>