hphp/test/zend/bad/ext/gd/tests/imagegif_nullbyte_injection.php.skipif
<?php
$support = gd_info();
if (!isset($support['GIF Create Support']) || $support['GIF Create Support'] === false) {
	print 'skip gif support not available';
}
?>